tests/negative/return_type_mismatch.sans
// expect-error: undefined
main() I {
  x = no_such_module.call()
  x
}
